syntax = "proto3";

package file_stream;
option go_package="./file_stream/filepb";

message UploadFileRequest {
    oneof data {
        FileInfo info = 1;
        bytes chunk_data = 2;
    }
}

message FileInfo{
    string file_id = 1;
    string  file_name = 2;
    string file_type = 3;
}

message UploadFileResponse{
    string id = 1;
    uint32 size = 2;
}

message ServeFileResponse{
    bytes chunk_data = 1;
}

message ServeFileRequest{
    string file_name = 1;
}

message RegisterPeersRequest{
    string ip = 1;
    int32 port = 2;
    repeated  string fileNames = 3;
}

message RegisterPeersResponse{
    string server_address = 1;
}

service FileService{
    rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse){};
    rpc DownloadFile (ServeFileRequest) returns (stream ServeFileResponse){};
    rpc RegisterPeers (RegisterPeersRequest) returns (RegisterPeersResponse){};
}